--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter City name" spellcheck="true">
-            <button><img src="./images/search.png"></button>
+            <button><img src="search.png"></button>
         </div>
 
         <div class="error">
@@ -19,14 +19,14 @@
         </div>
 
         <div class="weather">
-            <img src="images/clear.png" class="weather-icon">
+            <img src="clear.png" class="weather-icon">
             <h1 class="temp"></h1>
             <h2 class="city"></h2>
 
             <div class="details">
 
                 <div class="col">
-                    <img src="./images/humidity.png">
+                    <img src="humidity.png">
                     <div>
                         <p class="humidity"></p>
                         <p>Humidity</p>
@@ -34,7 +34,7 @@
                 </div>
 
                 <div class="col">
-                    <img src="./images/wind.png">
+                    <img src="wind.png">
                     <div>
                         <p class="wind"></p>
                         <p>Wind Speed</p>
